Update composer file #2

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "3.0.1"
+      "dev-master": "3.0.x-dev"
     }
   },
   "minimum-stability": "dev",
