Fix typo in module name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pawlus44l/media-module",
+  "name": "pawlus44/media-module",
   "type": "asgard-module",
   "description": "Media module for AsgardCMS. Handles the media library.",
   "keywords": [
